Bug 1450814 - generic implementation of DrawTarget::Blur using LockBits. r=rhunt a=jcristau

MozReview-Commit-ID: 2jROASoiPQd

--HG--
extra : source : ac40ae7983a0235ca4d98e3f769ae3c60b8b6d55